--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </style>
     <script>
         async function fetchThingSpeakData() {
-            const channelID = '2783657'; // Thay YOUR_CHANNEL_ID bằng Channel ID của bạn
-            const apiKey = 'FZUQDUYN7ON76T8P'; // Thay YOUR_READ_API_KEY bằng Read API Key của bạn
+            const channelID = '2784581'; // Thay YOUR_CHANNEL_ID bằng Channel ID của bạn
+            const apiKey = 'H3ILJH2PGQYXOJDC'; // Thay YOUR_READ_API_KEY bằng Read API Key của bạn
             const url = `https://api.thingspeak.com/channels/${channelID}/feeds.json?api_key=${apiKey}&results=1`;
 
             try {
