--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         async function fetchThingSpeakData() {
             const channelID = '2783657'; // Thay YOUR_CHANNEL_ID bằng Channel ID của bạn
             const apiKey = 'FZUQDUYN7ON76T8P'; // Thay YOUR_READ_API_KEY bằng Read API Key của bạn
-            const url = `https://api.thingspeak.com/channels/${channelID}/feeds.json?api_key=${apiKey}&results=1`;
+            const url = `https://api.thingspeak.com/channels/2783657/feeds.json?results=2`;
 
             try {
                 const response = await fetch(url);
