--- a/index.html
+++ b/index.html
@@ -1,5 +1,35 @@
 <!DOCTYPE html>
 <html lang="vi">
+<style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+            background-color: #f2f2f2;
+        }
+        h1 {
+            color: #333;
+        }
+        .data-container {
+            margin-top: 30px;
+        }
+        .data-field {
+            background-color: #fff;
+            padding: 20px;
+            margin: 10px auto;
+            width: 300px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .data-field h2 {
+            margin-bottom: 10px;
+            color: #555;
+        }
+        .data-field p {
+            font-size: 1.2em;
+            color: #000;
+        }
+    </style>
 <head>
     <meta charset="UTF-8">
     <title>Dashboard Cập Nhật Tự Động</title>
