--- a/index.html
+++ b/index.html
@@ -1,63 +1,70 @@
 <!DOCTYPE html>
 <html lang="vi">
-<style>
+<head>
+    <meta charset="UTF-8">
+    <title>Dashboard Cập Nhật Tự Động</title>
+    <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            padding: 50px;
-            background-color: #f2f2f2;
+            background-color: #f0f0f0;
+            padding-top: 50px;
         }
         h1 {
             color: #333;
         }
         .data-container {
-            margin-top: 30px;
-        }
-        .data-field {
             background-color: #fff;
             padding: 20px;
-            margin: 10px auto;
+            margin: 20px auto;
+            border-radius: 10px;
             width: 300px;
-            border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-        .data-field h2 {
-            margin-bottom: 10px;
-            color: #555;
-        }
-        .data-field p {
+        .data-item {
+            margin: 10px 0;
             font-size: 1.2em;
-            color: #000;
+        }
+        .timestamp {
+            color: #666;
+            font-size: 0.9em;
         }
     </style>
-<head>
-    <meta charset="UTF-8">
-    <title>Dashboard Cập Nhật Tự Động</title>
     <script>
         // Hàm để lấy dữ liệu từ ThingSpeak
         async function fetchData() {
-            const channelID = '2783657';
-            const apiKey = 'FZUQDUYN7ON76T8P';
+            const channelID = 'YOUR_CHANNEL_ID'; // Thay bằng Channel ID của bạn
+            const apiKey = 'YOUR_READ_API_KEY';  // Thay bằng API Read Key của bạn
             const url = `https://api.thingspeak.com/channels/${channelID}/feeds.json?api_key=${apiKey}&results=1`;
 
             try {
                 const response = await fetch(url);
+                if (!response.ok) {
+                    throw new Error(`HTTP error! Status: ${response.status}`);
+                }
                 const data = await response.json();
                 const feed = data.feeds[0];
 
                 // Cập nhật dữ liệu lên trang web
-                document.getElementById('field1').innerText = feed.field1;
-                document.getElementById('field2').innerText = feed.field2;
-                document.getElementById('timestamp').innerText = feed.created_at;
+                document.getElementById('field1').innerText = feed.field1 || 'Không có dữ liệu';
+                document.getElementById('field2').innerText = feed.field2 || 'Không có dữ liệu';
+                document.getElementById('field3').innerText = feed.field3 || 'Không có dữ liệu';
+                document.getElementById('field4').innerText = feed.field4 || 'Không có dữ liệu';
+                document.getElementById('timestamp').innerText = feed.created_at ? new Date(feed.created_at).toLocaleString() : 'Không có dữ liệu';
             } catch (error) {
                 console.error('Lỗi khi lấy dữ liệu:', error);
+                document.getElementById('field1').innerText = 'Lỗi';
+                document.getElementById('field2').innerText = 'Lỗi';
+                document.getElementById('field3').innerText = 'Lỗi';
+                document.getElementById('field4').innerText = 'Lỗi';
+                document.getElementById('timestamp').innerText = 'Lỗi';
             }
         }
 
         // Hàm để khởi động quá trình tự động cập nhật
         function startAutoUpdate() {
             fetchData(); // Lấy dữ liệu ngay lập tức khi trang tải
-            setInterval(fetchData, 10000); // Lấy dữ liệu mỗi 10 giây
+            setInterval(fetchData, 3000); // Lấy dữ liệu mỗi 3 giây
         }
 
         window.onload = startAutoUpdate;
@@ -65,8 +72,12 @@
 </head>
 <body>
     <h1>Dashboard ThingSpeak</h1>
-    <p>Field1: <span id="field1">Đang tải...</span></p>
-    <p>Field2: <span id="field2">Đang tải...</span></p>
-    <p>Thời gian: <span id="timestamp">Đang tải...</span></p>
+    <div class="data-container">
+        <div class="data-item">Field1: <span id="field1">Đang tải...</span></div>
+        <div class="data-item">Field2: <span id="field2">Đang tải...</span></div>
+        <div class="data-item">Field3: <span id="field3">Đang tải...</span></div>
+        <div class="data-item">Field4: <span id="field4">Đang tải...</span></div>
+        <div class="data-item timestamp">Thời gian: <span id="timestamp">Đang tải...</span></div>
+    </div>
 </body>
 </html>
