--- a/index.html
+++ b/index.html
@@ -1,131 +1,77 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Dashboard Cập Nhật Tự Động</title>
+    <title>Thông Tin Từ ThingSpeak</title>
     <style>
-        /* Reset một số thiết lập mặc định */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
         body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f6f8;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            padding: 20px;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+            background-color: #f2f2f2;
         }
-
         h1 {
             color: #333;
-            margin-bottom: 30px;
-            text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
         }
-
         .data-container {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            justify-content: center;
-            width: 100%;
-            max-width: 800px;
+            margin-top: 30px;
         }
-
-        .data-item {
-            background-color: #ffffff;
-            border: 2px solid #4CAF50;
-            border-radius: 10px;
+        .data-field {
+            background-color: #fff;
             padding: 20px;
-            width: 220px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
+            margin: 10px auto;
+            width: 300px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
-
-        .data-item:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 12px rgba(0,0,0,0.2);
-        }
-
-        .data-item h2 {
-            font-size: 1.2em;
-            color: #4CAF50;
+        .data-field h2 {
             margin-bottom: 10px;
-        }
-
-        .data-item p {
-            font-size: 1.5em;
             color: #555;
         }
-
-        .timestamp {
-            font-size: 0.9em;
-            color: #888;
-            margin-top: 10px;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 600px) {
-            .data-item {
-                width: 100%;
-            }
+        .data-field p {
+            font-size: 1.2em;
+            color: #000;
         }
     </style>
     <script>
-        // Hàm để lấy dữ liệu từ ThingSpeak
-        async function fetchData() {
-            const channelID = 'YOUR_CHANNEL_ID'; // Thay bằng Channel ID của bạn
-            const apiKey = 'YOUR_READ_API_KEY';  // Thay bằng API Read Key của bạn
+        async function fetchThingSpeakData() {
+            const channelID = '2783657'; // Thay YOUR_CHANNEL_ID bằng Channel ID của bạn
+            const apiKey = 'FZUQDUYN7ON76T8P'; // Thay YOUR_READ_API_KEY bằng Read API Key của bạn
             const url = `https://api.thingspeak.com/channels/${channelID}/feeds.json?api_key=${apiKey}&results=1`;
 
             try {
                 const response = await fetch(url);
-                if (!response.ok) {
-                    throw new Error(`HTTP error! Status: ${response.status}`);
-                }
                 const data = await response.json();
                 const feed = data.feeds[0];
 
-                // Cập nhật dữ liệu lên trang web
-                document.getElementById('field1').innerText = feed.field1 || 'Không có dữ liệu';
-                document.getElementById('field2').innerText = feed.field2 || 'Không có dữ liệu';
-                document.getElementById('timestamp').innerText = feed.created_at ? new Date(feed.created_at).toLocaleString() : 'Không có dữ liệu';
+                document.getElementById('espID').innerText = feed.field1 || 'N/A';
+                document.getElementById('fingerprintID').innerText = feed.field2 || 'N/A';
+                document.getElementById('timestamp').innerText = feed.field3 || 'N/A';
             } catch (error) {
-                console.error('Lỗi khi lấy dữ liệu:', error);
-                document.getElementById('field1').innerText = 'Lỗi';
-                document.getElementById('field2').innerText = 'Lỗi';
-                document.getElementById('timestamp').innerText = 'Lỗi';
+                console.error('Error fetching data:', error);
+                document.getElementById('espID').innerText = 'Error';
+                document.getElementById('fingerprintID').innerText = 'Error';
+                document.getElementById('timestamp').innerText = 'Error';
             }
         }
 
-        // Hàm để khởi động quá trình tự động cập nhật
-        function startAutoUpdate() {
-            fetchData(); // Lấy dữ liệu ngay lập tức khi trang tải
-            setInterval(fetchData, 3000); // Lấy dữ liệu mỗi 3 giây
-        }
-
-        window.onload = startAutoUpdate;
+        window.onload = fetchThingSpeakData;
     </script>
 </head>
 <body>
-    <h1>Dashboard ThingSpeak</h1>
+    <h1>Thông Tin Từ ThingSpeak</h1>
     <div class="data-container">
-        <div class="data-item">
-            <h2>Field1</h2>
-            <p id="field1">Đang tải...</p>
+        <div class="data-field">
+            <h2>ESP ID</h2>
+            <p id="espID">Loading...</p>
         </div>
-        <div class="data-item">
-            <h2>Field2</h2>
-            <p id="field2">Đang tải...</p>
+        <div class="data-field">
+            <h2>Fingerprint ID</h2>
+            <p id="fingerprintID">Loading...</p>
         </div>
-        <div class="data-item" style="width: 100%; text-align: center;">
-            <h2>Thời gian</h2>
-            <p id="timestamp" class="timestamp">Đang tải...</p>
+        <div class="data-field">
+            <h2>Timestamp</h2>
+            <p id="timestamp">Loading...</p>
         </div>
     </div>
 </body>
