--- a/index.html
+++ b/index.html
@@ -116,11 +116,11 @@
     <h1>Dashboard ThingSpeak</h1>
     <div class="data-container">
         <div class="data-item">
-            <h2>Field1</h2>
+            <h2>ESP ID</h2>
             <p id="field1">Đang tải...</p>
         </div>
         <div class="data-item">
-            <h2>Field2</h2>
+            <h2>Fingerprint ID</h2>
             <p id="field2">Đang tải...</p>
         </div>
         <div class="data-item" style="width: 100%; text-align: center;">
