--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
     <div class="data-container">
         <div class="data-item">
             <h2>ESP ID</h2>
-            <p id="field1">Đang tải...</p>
+            <p id="ESP ID">Đang tải...</p>
         </div>
         <div class="data-item">
             <h2>Fingerprint ID</h2>
-            <p id="field2">Đang tải...</p>
+            <p id="Fingerprint ID">Đang tải...</p>
         </div>
         <div class="data-item" style="width: 100%; text-align: center;">
             <h2>Thời gian</h2>
